# coddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.dist.yaml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.cursor/rules/: architecture.mdc  code-style.mdc  implementation-order.mdc  testing.mdc  workflow.mdc
coddy/: __main__.py  config.py  daemon.py  issue_state.py  issue_store.py  logging.py  main.py  models.py  queue.py  scheduler.py  utils.py  worker.py
coddy/adapters/: __init__.py  base.py  github.py
coddy/agents/: base.py  cursor_cli_agent.py  stub_agent.py
coddy/observer/: __init__.py  __main__.py  daemon.py  planner.py  queue.py  run.py  scheduler.py
coddy/scripts/: __init__.py  issue_to_markdown.py
coddy/services/: __init__.py  git_runner.py  issue_processor.py  planner.py  (+3 more)
docs/: architecture.md  development-guide.md  dialog-template.md  docker-and-secrets.md  issue-flow.md  issue-pr-merged-webhook-short.md  issue-storage.md  platform-apis.md  refactor-packages-plan.md  system-specification.md
scripts/: issue_to_markdown.py  setup-docker-secrets.sh
tests/: test_adapters_github.py  test_agents_cursor_cli.py  test_agents_stub.py  test_git_runner.py  test_github_integration.py  test_issue_file.py  test_issue_processor.py  test_issue_store.py  test_issue_to_markdown.py  test_logging.py  test_queue.py  test_ralph_loop.py  test_review_handler.py  test_scheduler.py  test_services_git.py  test_services_store.py  test_task_file.py  test_task_yaml.py  test_utils.py  test_webhook_handlers.py
(+70 files in other folders)
